Grinder 3.0-beta22
------------------

  Fix bug in HTTPPlugin - shouldn't follow automatically redirects by
  default.


Grinder 3.0-beta21
------------------

  New process ramp-up feature from Bertrand Ave and Phil Aston. New
  properties: grinder.initialProcesses, grinder.processIncrement, and
  grinder.processIncrementInterval. (Whilst this new feature is useful,
  process ramp-up and other scheduling will eventually be implemented
  by the console.)


Grinder 3.0-beta20
------------------

  Fix bug 912050 - gr3-b19 doesn't playback recorded URL params.
  Fix bug 911966 - gr3-b19 doesn't playback User-Agent: header.
  Thanks to Koen Debruyckere for the timely reports.

  Simplify HTTPRequest API slightly by removing some redundant
  overloaded methods and ordering parameters for consistently.

  Other fixes to HTTPRequest:
   - DELETE() mistakenly invoked a Trace() method.
   - GET() and OPTIONS() could pass header values to query strings.

  The PluginRegistry class that a plugin must use has been moved to
  the plugininterface package.


Grinder 3.0-beta19
------------------

  Removed redundant getLogger() and getFilenameFactory() from
  PluginProcessContext and PluginThreadContext. Plug-ins can get these
  services from the script context object and share them with worker
  threads.

  The PluginRegistry.register() method now takes an instance of
  GrinderPlugin, rather than a class that implements GrinderPlugin,
  and no longer returns a PluginProcessContext.

  Fix bug 820481 - StringIndexOutOfBoundsException when logging.
  Thanks to Dragos Cernahoschi and Gordon Reid for reports.

  Fix bug 805013 - mean time is not correct. Thanks to all who
  reported this, and to Jan Wilmaers and Bart Bauwens for their
  investigation and analysis.

  HTTP response errors statistic from John Stanford White.

  Added a processResponse method to HTTPRequest so that scripts
  subclasses can process respones.
